packages/metadata-common/style/index.css
/*
 * Copyright 2018-2022 Elyra Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/* MetadataWidget CSS */
.elyra-metadata {
  color: var(--jp-ui-font-color1);
  background: var(--jp-layout-color1);
}

.elyra-metadata a,
.elyra-metadataEditor a {
  color: var(--jp-content-link-color);
}

.elyra-metadataHeader {
  font-weight: bold;
  padding: 8px 10px;
  display: flex;
  justify-content: space-between;
}

.elyra-metadataHeader p {
  font-weight: bold;
}

.elyra-metadataHeader-popper {
  z-index: 100;
}

.elyra-metadataHeader-button:hover {
  background-color: var(--jp-layout-color2);
  cursor: pointer;
}

.elyra-metadataHeader [fill] {
  fill: var(--jp-ui-font-color1);
}

.elyra-metadataHeader + div:first-of-type {
  overflow-y: auto;
  height: calc(100vh - 95px);
}

.elyra-metadata-item {
  border-bottom: var(--jp-border-width) solid var(--jp-border-color2);
  display: flex;
  flex-direction: column;
  margin: 0;
  padding: 0;
}

.elyra-metadata-item .elyra-expandableContainer-details-visible {
  background-color: var(--jp-cell-editor-background);
  resize: vertical;
}

.elyra-metadata-item .CodeMirror.cm-s-jupyter {
  background-color: inherit;
  border: none;
  font-family: var(--jp-code-font-family);
  font-size: var(--jp-code-font-size);
  line-height: var(--jp-code-line-height);
}

.elyra-metadata-item .cm-s-jupyter li .cm-string {
  word-break: normal;
}

/* MetadataEditor css */
.elyra-metadataEditor .jp-InputGroup {
  width: 100%;
}

.elyra-metadataEditor-formInput.elyra-metadataEditor-secure label {
  margin-right: 70px;
}

.elyra-metadataEditor {
  color: var(--jp-ui-font-color1);
}

.elyra-form-DropDown-item {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: left;
  margin: 0;
  border-radius: 0;
}

.elyra-metadataEditor {
  padding: 20px;
  display: flex;
  flex-wrap: wrap;
  height: 100%;
  align-content: flex-start;
  align-items: flex-start;
  justify-content: flex-start;
}

.elyra-metadataEditor .elyra-metadataEditor-arrayInput li {
  padding-left: 0;
  padding-bottom: 0;
}

.elyra-metadataEditor
  .elyra-metadataEditor-arrayInput
  li:not(.elyra-metadataEditor-arrayItemEditor)
  .elyra-elyra-metadataHeaderMuiInputBase-formControl {
  background-color: var(--jp-border-color3);
}

.elyra-metadataEditor
  .elyra-metadataEditor-arrayInput
  .elyra-metadataEditor-editButtons
  button {
  padding: 3px;
}

.elyra-metadataEditor
  .elyra-metadataEditor-arrayInput
  .elyra-metadataEditor-addItemButton {
  background-color: var(--jp-border-color1);
}

.elyra-metadataEditor .elyra-metadataEditor-arrayItemEditor {
  display: flex;
  padding: 6px 0 3px 0;
}

.elyra-metadataEditor h3 {
  flex-basis: 100%;
  margin-bottom: 15px;
  color: var(--jp-ui-font-color1);
}

.elyra-metadataEditor .elyra-form-code.jp-CodeMirrorEditor {
  background-color: var(--jp-cell-editor-background);
  border: var(--jp-border-width) solid var(--jp-input-border-color);
  overflow-y: auto;
  resize: vertical;
  min-height: 150px;
  height: 150px;
  padding-bottom: 10px;
  cursor: initial;
  margin-top: 5px;
}

.elyra-metadataEditor .CodeMirror.cm-s-jupyter {
  background-color: inherit;
  height: 100%;
}

.elyra-metadataEditor .elyra-metadataEditor-code {
  height: auto;
  flex-basis: 100%;
  display: flex;
  flex-direction: column;
}

.elyra-metadataEditor-formInput {
  margin: 10px;
  flex-basis: 45%;
}

.elyra-metadata-editor {
  overflow-y: auto;
}

.elyra-metadataEditor .elyra-metadataEditor-saveButton {
  flex-basis: 100%;
  display: flex;
  flex-direction: column;
}

/* Code Snippet Filter CSS */
.elyra-searchbar {
  margin: 0px 8px;
}

.elyra-filterTools {
  border-bottom: var(--jp-border-width) solid var(--jp-border-color1);
}

mark.elyra-search-bolding {
  background-color: transparent;
  font-weight: bold;
  color: var(--jp-ui-font-color0);
}

.elyra-filter {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 10px 10px 0 10px;
}

.elyra-filter .elyra-filter-btn {
  align-self: flex-end;
  padding: 0px;
  margin-bottom: 5px;
  border-radius: 5px;
  border: none;
  background: none;
  cursor: pointer;
}

.elyra-filter .elyra-filter-btn:hover {
  background-color: var(--jp-layout-color2);
}

.elyra-filter-btn svg {
  display: block;
  width: 30px;
  height: 22px;
}

.elyra-filter-arrow-up.idle,
.elyra-filter-option.idle {
  display: none;
}

.elyra-filter-arrow-up {
  position: absolute;
  margin-top: 16px;
  margin-right: 38px;
  align-self: flex-end;
  background-color: var(--jp-layout-color0);
}

.elyra-filter-option {
  border: var(--jp-border-width) solid var(--jp-border-color1);
  height: 140px;
  width: 100%;
  margin-bottom: 10px;
  padding-top: 5px;
  padding-bottom: 5px;
  overflow: auto;
}

.elyra-filter-tags {
  margin: 8px 8px;
}

.elyra-filter-tag {
  margin-left: 3px;
  margin-right: 3px;
}

button.elyra-filter-tag {
  height: 24px;
  padding: 0 12px;
  cursor: pointer;
  color: var(--jp-ui-font-color2);
  font-size: var(--jp-ui-font-size1);
}

button.elyra-filter-tag .elyra-filter-tag-label {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

button.elyra-filter-tag span,
button.elyra-filter-tag svg {
  pointer-events: none;
}

.elyra-filter-empty {
  font-size: var(--jp-ui-font-size1);
}

.elyra-tools {
  border-bottom: var(--jp-border-width) solid var(--jp-border-color1);
}

.elyra-editor-tagList {
  list-style: none;
  margin-left: -3px;
  margin-top: 4px;
}

.elyra-editor-tag {
  margin-left: 3px;
  margin-right: 3px;
  padding: 0 12px;
  height: 24px;
}

button.elyra-editor-tag {
  cursor: pointer;
  color: var(--jp-ui-font-color2);
  font-size: var(--jp-ui-font-size1);
}

button.elyra-editor-tag.applied-tag {
  color: var(--jp-ui-font-color1);
}

button.elyra-editor-tag.unapplied-tag {
  color: var(--jp-ui-font-color2);
  white-space: nowrap;
}

.elyra-editor-tag.tag.unapplied-tag input {
  border: none;
}

/* Code Snippet Tags in InputDialog */
.elyra-inputTagList {
  list-style: none;
}

.elyra-inputTag {
  margin-left: 8px;
  margin-right: 8px;
}

button.elyra-inputTag {
  cursor: pointer;
  background: none;
  border: none;
  color: var(--jp-ui-font-color2);
  padding: 0;
  font-size: var(--jp-ui-font-size1);
}

.field-object > fieldset > legend {
  font-size: var(--jp-content-font-size3);
}

legend#root__noCategory__title {
  display: none;
}

.form-group input[readonly] {
  background: var(--jp-border-color3);
}

.form-group.field.field-object {
  width: 100%;
}

.jp-ArrayOperations button:disabled {
  cursor: not-allowed;
}

.elyra-passwordFieldButton {
  border: none;
  border-radius: 5px;
  background: var(--jp-cell-editor-active-background);
  position: absolute;
  right: 1px;
  bottom: 7px;
}

.elyra-passwordField {
  position: relative;
  display: flex;
}

.elyra-passwordFieldButton:hover {
  background-color: var(--jp-border-color3);
}

.elyra-passwordFieldButton svg {
  width: 25px;
  display: flex;
}

input.elyra-inputTag {
  font-size: var(--jp-ui-font-size1);
  background: none;
  border: none;
  color: var(--jp-ui-font-color2);
  font-size: var(--jp-ui-font-size1);
  width: 80px;
  height: 15px;
}

.form-group .form-control {
  padding: 8px;
  border: 1px solid var(--jp-border-color1);
  border-radius: 4px;
  font-size: var(--jp-content-font-size2);
  margin-top: 10px;
  width: 100%;
}

.elyra-metadataEditor-saveButton button {
  background: none;
  border: 1px solid var(--jp-border-color1);
  border-radius: 3px;
  padding: 10px;
  font-size: var(--jp-content-font-size2);
  width: fit-content;
}

.form-group.field {
  padding: 15px 15px 15px 0px;
  display: flex;
  flex-direction: column;
  width: 45%;
}

.elyra-metadataEditor datalist {
  display: none;
}

.panel.panel-danger.errors,
p#root__description,
button.btn[type='submit'] {
  display: none;
}

li.text-danger {
  color: var(--jp-error-color1);
}

form.rjsf {
  width: 100%;
}

fieldset#root > div > fieldset {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

label.control-label {
  font-size: var(--jp-content-font-size2);
}

fieldset#root {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  justify-content: space-between;
}

.rjsf > .form-group.field,
.form-group.field.tagsField,
.form-group.field.languageField {
  width: 100%;
}

.elyra-metadataEditor-saveButton.errorForm {
  color: var(--jp-content-font-color3);
}

.elyra-metadataEditor-saveButton.errorForm button {
  border-color: var(--jp-content-font-color3);
  cursor: not-allowed;
}

.elyra-tags {
  margin-top: 8px;
}

.elyra-no-metadata-msg {
  padding-left: 8px;
}

